# stopsign_ai

./: .dockerignore  .gitignore  .infisical.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile.ffmpeg  Dockerfile.processor  Dockerfile.web  Makefile  README.md  config.yaml  debug_otel.py  debug_spans.py  docker-compose.yml  long-term-improvements.md  migrate_config_to_db.py  pyproject.toml
.github/workflows/: deploy-dashboards.yml
config/: config.example.yaml
docker/: .env.example  Dockerfile.ffmpeg  Dockerfile.web  docker-compose.yml
docker/local/: .env.example  Dockerfile.ffmpeg.local  Dockerfile.processor.local  Dockerfile.rtsp.local  Dockerfile.web.local  Makefile  docker-compose.yml
docker/production/: Dockerfile.ffmpeg  Dockerfile.processor  Dockerfile.web  docker-compose.yml  entrypoint.sh
docs/: frozen-stream-guardrail-spec.md  tracking-rewrite-review.md  tracking-rewrite-spec.md
docs/analysis/: 2026-02-21-stop-calibration.md
docs/architecture/: decoupled-media-plane-migration.md  first-principles-streaming.md
docs/specs/: 2026-03-02-clip-alignment-method-b.md  passes-raw-data.md  stop-scoring.md
docs/tasks/: homepage-performance-experiments.md  passes-raw-data.md
monitoring/: stopsign-overview-dashboard.json
monitoring/dashboards/: .gitkeep  stopsign-business-analytics.json  stopsign-business-metrics.json  stopsign-overview-dashboard.json  stopsign-production-dashboard.json  stopsign-system-health.json  stopsign-system-monitoring.json
rtsp_to_redis/: .env.example  .gitignore  Dockerfile  docker-compose.yml  rtsp_to_redis.py
rtsp_to_redis/app/: rtsp_to_redis.py
rtsp_to_redis/docker/: Dockerfile  docker-compose.yml  prometheus.yml
rtsp_to_redis/grafana/dashboards/: rtsp_dashboard.json
sample_data/: README.md
scripts/: audit_clip_alignment.py  cleanup_dashboards.py  cluster_vehicles.py  deploy_dashboards.py  export_onnx.py  pipeline_probe.py  post_deploy_check.sh  profile_homepage_perf.py  schedule_deploy_check.sh  tracking_baseline.json  validate_tracking.py  verify_raw_payloads.py
static/: base.css  robots.txt  sitemap.xml  summary.md  summary.txt
static/js/: debug.js  home.js  video-player.js
stopsign/: app.py  components.py  config.py  coordinate_transform.py  database.py  ffmpeg_service.py  frame_codec.py  frame_processor.py  frame_source.py  freeze_detector.py  hls_health.py  image_storage.py  index.html  kalman_filter.py  main.py  onnx_detector.py  service_status.py  stream_out.py  stream_processor.py  telemetry.py  tracking.py  trajectory_scorer.py  utils.py  video_analyzer.py  web_server.py
stopsign/settings/: __init__.py
stopsign/utils/: video.py
stopsign/web/: app.py  middleware.py
stopsign/web/routes/: api.py  debug_api.py  health.py  infrastructure.py  pages.py  stream.py
stopsign/web/services/: clips.py  images.py  insights.py  passes.py  scoring.py  seo.py
stopsign/web/templates/: about.html  base.html  debug.html  debug_perf.html  home.html  pass_detail.html  records.html  statistics.html  vehicles.html
stopsign/web/templates/partials/: bar_chart.html  gallery.html  live_stats.html  make_models.html  pass_item.html  pass_item_row.html  pass_list.html  recent_passes.html  vehicle_summary.html  video.html
stopsign_ai/: main.py
tests/: conftest.py  test_car_tracking.py  test_ffmpeg_frame_decode.py  test_frame_codec.py  test_freeze_detector.py  test_image_storage.py  test_kalman_filter.py  test_onnx_detector.py  test_rtsp_to_redis_config.py  test_trajectory_primary.py  test_trajectory_scorer.py  test_trajectory_shadow.py  test_video_analyzer.py  test_web_asset_version.py  test_web_image_thumbnails.py  test_web_readyz.py
tools/: print_config.py  set_stop_line.py  set_stop_zone.py
