[project]
name = "stopsign-ai"
version = "0.1.0"
description = ""
authors = ["David Rose <david@drose.io>"]
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "filterpy>=1.4.5",
    "lapx>=0.5.10.post1",
    "opencv-python>=4.10.0.84",
    "prometheus-client>=0.20.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "python-fasthtml>=0.6.2",
    "redis>=5.0.8",
    "shapely>=2.0.6",
    "sqlalchemy-utils>=0.41.2",
    "sqlalchemy>=2.0.36",
    "ultralytics>=8.2.96",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "E", "F", "Q000"]
ignore = []

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
