[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stopsign-ai"
version = "0.1.0"
description = ""
authors = [{name = "David Rose", email = "david@drose.io"}]
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "filterpy>=1.4.5",
    "ipykernel>=6.29.5",
    "lapx>=0.5.10.post1",
    "minio>=7.2.9",
    "opencv-python>=4.10.0.84",
    "prometheus-client>=0.20.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "python-fasthtml>=0.6.2",
    "redis>=5.0.8",
    "shapely>=2.0.6",
    "sqlalchemy-utils>=0.41.2",
    "sqlalchemy>=2.0.36",
    "ultralytics>=8.2.96",
    "opentelemetry-distro>=0.55b1",
    "opentelemetry-exporter-otlp>=1.34.1",
    "opentelemetry-instrumentation-fastapi>=0.55b1",
    "opentelemetry-instrumentation-sqlalchemy>=0.55b1",
    "opentelemetry-instrumentation-redis>=0.55b1",
    "opentelemetry-instrumentation-requests>=0.55b1",
    "ruff>=0.13.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "fakeredis>=2.20.0",
]

[tool.hatch.build.targets.wheel]
packages = ["stopsign"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "E", "F", "Q000"]
ignore = []

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
