[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stopsign-ai"
version = "0.1.0"
description = ""
authors = [{name = "David Rose", email = "david@drose.io"}]
requires-python = "~=3.12.0"
dependencies = [
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0",
    "redis>=5.0.8",
    "opentelemetry-distro>=0.55b1",
    "opentelemetry-exporter-otlp>=1.34.1",
    "opentelemetry-instrumentation-redis>=0.55b1",
    "opentelemetry-instrumentation-requests>=0.55b1",
]

[project.optional-dependencies]
# ML inference (video_analyzer only)
ml = [
    "filterpy>=1.4.5",
    "opencv-python-headless>=4.10.0.84",
    "onnxruntime-gpu>=1.19.0; sys_platform == 'linux'",
    "onnxruntime>=1.19.0; sys_platform != 'linux'",
    "prometheus-client>=0.20.0",
    "psutil>=5.9.0",
    "pytz>=2024.1",
    "shapely>=2.0.6",
    "supervision>=0.25.0",
]
# Database access (video_analyzer + web_server)
db = [
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.36",
    "sqlalchemy-utils>=0.41.2",
    "opentelemetry-instrumentation-sqlalchemy>=0.55b1",
]
# Object storage (video_analyzer + web_server)
storage = [
    "minio>=7.2.9",
]
# Web UI (web_server only)
web = [
    "psutil>=5.9.0",
    "python-fasthtml>=0.6.2",
    "opentelemetry-instrumentation-fastapi>=0.55b1",
]
# Development tools
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.13.2",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "fakeredis>=2.20.0",
]

[tool.hatch.build.targets.wheel]
packages = ["stopsign"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "E", "F", "Q000"]
ignore = []

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
